--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "vercel": "^37.6.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
