--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,14 @@
               ],
               "outputHashing": "all"
             },
+            "prd": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prd.ts"
+                }
+              ]
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
