--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@lottiefiles/dotlottie-web": "^0.31.0",
     "@types/gsap": "^3.0.0",
+    "boxicons": "^2.1.4",
     "gsap": "^3.12.5",
     "http": "^0.0.1-security",
     "jquery": "^3.7.1",
