--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ coreKtx = "1.15.0"           # 1.17.0 exige API 36
 activityCompose = "1.9.3"    # 1.12.0 exige API 36
 kotlinxCoroutinesPlayServices = "1.10.1"
 lifecycleRuntimeKtx = "2.8.7" # 2.10.0 pode exigir API nova
+material = "1.10.0"
 navigationCompose = "2.8.5"  # 2.9.6 é instável/alpha
 composeBom = "2024.11.00"    # Versão estável mais recente
 junitVersion = "1.2.1"       # Versões 1.3.x podem pedir API 36
@@ -45,6 +46,7 @@ androidx-activity-compose = { group = "androidx.activity", name = "activity-comp
 
 # Compose
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+androidx-material = { module = "androidx.compose.material:material", version.ref = "material" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
